--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 autopep8==1.4.4
 Click==7.0
 Flask==1.1.1
+Flask-SQLAlchemy==2.4.0
+Flask-WTF==0.14.2
 gunicorn==19.9.0
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
 pycodestyle==2.5.0
+SQLAlchemy==1.3.7
 Werkzeug==0.15.5
+WTForms==2.2.1
